Removed box-card__no-border class, replaced with global no-border class.

--- a/source/_patterns/04-pages/StudentOrientationFinal2016.mustache
+++ b/source/_patterns/04-pages/StudentOrientationFinal2016.mustache
@@ -89,7 +89,7 @@ Fixed position will be removed when back to the top of the page.
     </div>
 
     <div class="col-md-4 col-sm-12 col-xs-12">
-      <div class="box-card box-card__no-border bg-x-light-gray" data-match-height="gettingStarted">
+      <div class="box-card no-border bg-x-light-gray" data-match-height="gettingStarted">
         <div class="box-card--image-wrap">
           <img class="box-card--image" src="../../placeholders/images/orientation/wifi.jpg" alt="person holding phone with wifi symbol">
         </div>
@@ -107,7 +107,7 @@ Fixed position will be removed when back to the top of the page.
     </div>
 
     <div class="col-md-4 col-sm-12 col-xs-12">
-      <div class="box-card box-card__no-border bg-x-light-gray" data-match-height="gettingStarted">
+      <div class="box-card no-border bg-x-light-gray" data-match-height="gettingStarted">
         <div class="box-card--image-wrap">
           <img class="box-card--image" src="../../placeholders/images/orientation/solar.jpg" alt="wolfie the seawolf floating in space">
         </div>
@@ -125,7 +125,7 @@ Fixed position will be removed when back to the top of the page.
     </div>
 
     <div class="col-md-4 col-sm-12 col-xs-12">
-      <div class="box-card box-card__no-border bg-x-light-gray" data-match-height="gettingStarted">
+      <div class="box-card no-border bg-x-light-gray" data-match-height="gettingStarted">
         <div class="box-card--image-wrap">
           <img class="box-card--image" src="../../placeholders/images/orientation/netid.jpg" al="student sitting on couch on laptop">
         </div>
@@ -164,7 +164,7 @@ Fixed position will be removed when back to the top of the page.
     </div>
 
     <div class="col-md-4 col-sm-12 col-xs-12">
-      <div class="box-card box-card__no-border bg-white" data-match-height="studentServices">
+      <div class="box-card no-border bg-white" data-match-height="studentServices">
         <div class="box-card--image-wrap">
           <img class="box-card--image" src="../../placeholders/images/orientation/printing.jpg" alt="person using multifunction printer">
         </div>
@@ -182,7 +182,7 @@ Fixed position will be removed when back to the top of the page.
     </div>
 
     <div class="col-md-4 col-sm-12 col-xs-12">
-      <div class="box-card box-card__no-border bg-white" data-match-height="studentServices">
+      <div class="box-card no-border bg-white" data-match-height="studentServices">
         <div class="box-card--image-wrap">
           <img class="box-card--image" src="../../placeholders/images/orientation/sincsites.jpg" alt="students working in computer lab">
         </div>
@@ -200,7 +200,7 @@ Fixed position will be removed when back to the top of the page.
     </div>
 
     <div class="col-md-4 col-sm-12 col-xs-12">
-      <div class="box-card box-card__no-border bg-white" data-match-height="studentServices">
+      <div class="box-card no-border bg-white" data-match-height="studentServices">
         <div class="box-card--image-wrap">
           <img class="box-card--image" src="../../placeholders/images/orientation/software.jpg" alt="person sitting in front of laptop">
         </div>
@@ -242,7 +242,7 @@ Fixed position will be removed when back to the top of the page.
     </div>
 
     <div class="col-md-4 col-sm-12 col-xs-12">
-      <div class="box-card box-card__no-border bg-x-light-gray" data-match-height="learningTools">
+      <div class="box-card no-border bg-x-light-gray" data-match-height="learningTools">
         <div class="box-card--image-wrap">
           <img class="box-card--image" src="../../placeholders/images/orientation/google.jpg" alt="person in front of laptop with google apps logos on screen">
         </div>
@@ -260,7 +260,7 @@ Fixed position will be removed when back to the top of the page.
     </div>
 
     <div class="col-md-4 col-sm-12 col-xs-12">
-      <div class="box-card box-card__no-border bg-x-light-gray" data-match-height="learningTools">
+      <div class="box-card no-border bg-x-light-gray" data-match-height="learningTools">
         <div class="box-card--image-wrap">
           <img class="box-card--image" src="../../placeholders/images/orientation/blackboard.jpg" ald="student doing homework in front of laptop">
         </div>
@@ -278,7 +278,7 @@ Fixed position will be removed when back to the top of the page.
     </div>
 
     <div class="col-md-4 col-sm-12 col-xs-12">
-      <div class="box-card box-card__no-border bg-x-light-gray" data-match-height="learningTools">
+      <div class="box-card no-border bg-x-light-gray" data-match-height="learningTools">
         <div class="box-card--image-wrap">
           <img class="box-card--image" src="../../placeholders/images/orientation/lynda.jpg" alt="students working together at computer station">
         </div>
@@ -328,7 +328,7 @@ Fixed position will be removed when back to the top of the page.
   </div>
   <div class="container cozy wow animated fadeInUp">
     <div class="col-md-6 col-sm-6 col-xs-12">
-      <div class="box-card box-card__no-border box-card__transparent-background" data-match-height="gettingStarted">
+      <div class="box-card no-border box-card__transparent-background" data-match-height="gettingStarted">
         <div data-match-height="box-card--headings">
             <h3 class="box-card--heading white">Client Support</h3>
             <h4 class="box-card--subheading white">service.stonybrook.edu</h4>
@@ -342,7 +342,7 @@ Fixed position will be removed when back to the top of the page.
       </div>
     </div>
     <div class="col-md-6 col-sm-6 col-xs-12">
-      <div class="box-card box-card__no-border box-card__transparent-background" data-match-height="gettingStarted">
+      <div class="box-card no-border box-card__transparent-background" data-match-height="gettingStarted">
         <div data-match-height="box-card--headings">
             <h3 class="box-card--heading white">Student Helpdesk</h3>
         </div>
