--- a/source/src_scss/molecules/cards/_box-card.scss
+++ b/source/src_scss/molecules/cards/_box-card.scss
@@ -1,9 +1,9 @@
 /* cards */
 .box-card {
-    font-size: 1.5em;
-    line-height: 1.4;
+    font-size: 1.3em;
+    line-height: 1.5en;
     margin: 1em 0;
-    padding: .5em;
+    padding: 1em;
     width: 100%;
     border: 1px solid #000;
     background-color: #fff;
