--- a/source/src_scss/pages/_2016Orientation.scss
+++ b/source/src_scss/pages/_2016Orientation.scss
@@ -117,6 +117,7 @@ overflow: hidden
 	left: 0;
 	background-image: linear-gradient(to bottom left,#000000,transparent);
 	opacity: .6;
+  z-index: -1;
 }
 
 .continue-arrow {
