Made slight padding adjustments to box-card/simple-blurb cards. Added Blackboard Service Page Template.

--- a/source/_patterns/03-templates/02-service-page.mustache
+++ b/source/_patterns/03-templates/02-service-page.mustache
@@ -2,8 +2,7 @@
   <div class="container">
     <div class="hero-beyond--headings">
       <h2 class="heading white">Blackboard</h2>
-      <p class="introduction white">Blackboard is Stony Brook University's learning management system (LMS), which allows instructors to supplement face-to-face classes, or launch online classes. Blackboard includes a variety of features that allow instructors to do anything from uploading course documents, to posting an announcement, to collecting and grading assignments. For students, Blackboard offers an easy way to contact instructors, download and access course documents, and check grades.</p>
-    </div>
+      <p class="introduction white">Blackboard is Stony Brook University's learning management system (LMS).</p>
     <a class="default-button button-large bg-black" href="#">Launch Blackboard</a>
   </div>
 </section>
@@ -25,100 +24,224 @@
 
       <ul class="nav navbar--fixed__links main-nav">
         <li><a href="#blackboardBasics" class="fixedNavLink scrollto">Blackboard Basics</a></li>
-        <li><a href="#gettingStarted" class="fixedNavLink scrollto">For Students</a></li>
-        <li><a href="#studentServices" class="fixedNavLink scrollto">For Instructors</a></li>
-        <li><a href="#learningTools" class="fixedNavLink scrollto">Getting Help</a></li>
+        <li><a href="#studentGuide" class="fixedNavLink scrollto">For Students</a></li>
+        <li><a href="#instructorGuide" class="fixedNavLink scrollto">For Instructors</a></li>
+        <li><a href="#gettingHelp" class="fixedNavLink scrollto">Getting Help</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<section id="blackboardBasics" class="cozy bg-x-light-gray">
-  <div class="container cozy">
-    <div class="col-md-12">
-      <h2 class="section-heading"><strong>Blackboard Basics</strong></h2>
-      <p class="introduction">All courses are put into Blackboard, but instructors need to activate the course before students will be able to access it. All registered students (undergraduate and graduate) receive a Blackboard account at the beginning of their first semester at Stony Brook University.</p>
-    </div>
+<section id="blackboardBasics" class="cozy bg-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="section-heading"><strong>Blackboard Basics</strong></h2>
+      </div>
 
-    <div class="col-md-6 col-sm-12 col-xs-12">
-      <div class="box-card no-border bg-white" data-match-height="blackboardBasics">
-        <div data-match-height="box-card--headings">
-            <h3 class="box-card--heading red">Logging In</h3>
+      <div class="col-md-6">
+        <div class="simple-blurb-card" data-match-height="blackboardBasics">
+          <div>
+              <h3 class="simple-blurb-card--heading">Logging In</h3>
+          </div>
+          <div class="simple-blurb-card--text" data-match-height="blurb-card--content">
+            <p>To log into Blackboard, go to blackboard.stonybrook.edu in your web browser. (NOTE: no “www” in this address.)</p>
+            <p>In the Have an account? box, enter your NetID and NetID password in the respective fields.</p>
+            <p>Once you have entered your credentials, click Login.</p>
+          </div>
+          <div class="simple-blurb-card--cta">
+            <a href="#" class="default-button scrollto">Launch Blackboard &raquo;</a>
+          </div>
         </div>
-        <div class="box-card--content" data-match-height="box-card--content">
-          <p>To log into Blackboard, go to blackboard.stonybrook.edu in your web browser. (NOTE: no “www” in this address.)</p>
-          <p>In the Have an account? box, enter your NetID and NetID password in the respective fields.</p>
-          <p>Once you have entered your credentials, click Login.</p>
-        </div>
-        <div class="box-card--cta">
-          <a href="#" class="default-button button-large button-block scrollto">Launch Blackboard &raquo;</a>
+      </div>
+
+      <div class="col-md-6">
+        <div class="simple-blurb-card" data-match-height="blackboardBasics">
+          <div>
+              <h3 class="simple-blurb-card--heading">Blackboard Mobile</h3>
+          </div>
+          <div class="simple-blurb-card--text" data-match-height="blurb-card--content">
+            <p>Instructions for Setting Up the Blackboard Learn App on your SmartPhone:</p>
+            <p><a href="#">iPhone & iPod Touch &raquo;</a></p>
+            <p><a href="#">iPad &raquo;</a></p>
+            <p><a href="#">Android Devices &raquo;</a></p>
+            <p><a href="#">Blackberry Devices &raquo;</a></p>
+            <p><a href="#">Palm Devices &raquo;</a></p>
+          </div>
+          <div class="simple-blurb-card--cta">
+            <a href="#" class="default-button scrollto">Need Assistance? &raquo;</a>
+          </div>
         </div>
       </div>
     </div>
+  </div>
+</section>
 
-    <div class="col-md-6 col-sm-12 col-xs-12">
-      <div class="box-card no-border bg-white" data-match-height="blackboardBasics">
-        <div data-match-height="box-card--headings">
-            <h3 class="box-card--heading red">Blackboard Mobile</h3>
-        </div>
-        <div class="box-card--content" data-match-height="box-card--content">
-          <p>Instructions for Setting Up the Blackboard Learn App on your SmartPhone:</p>
-          <p><a href="#">iPhone & iPod Touch &raquo;</a></p>
-          <p><a href="#">iPad &raquo;</a></p>
-          <p><a href="#">Android Devices &raquo;</a></p>
-          <p><a href="#">Blackberry Devices &raquo;</a></p>
-          <p><a href="#">Palm Devices &raquo;</a></p>
+<section class="divider">
+  <div class="container">
+    <hr class="divider-gray">
+  </div>
+</section>
 
+<section id="studentGuide" class="cozy bg-white3">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="section-heading"><strong>Blackboard for Students</strong></h2>
+        <p class="introduction">
+Blackboard is a web-based course management system that is used as a tool to deliver a course completely online and/or to supplement face-to-face classes.  Blackboard is available to all Stony Brook University students 24/7, from any computer with Internet access.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="simple-blurb-card" data-match-height="blackboardBasics">
+          <div>
+              <h3 class="simple-blurb-card--heading">Students Blackboard Use</h3>
+          </div>
+          <div class="simple-blurb-card--text" data-match-height="blurb-card--content">
+            <ul>
+              <li>Viewing course documents (ex: syllabi, handouts, presentations, etc...)</li>
+              <li>Submitting course assignments</li>
+              <li>Send emails to instructors or other students</li>
+              <li>Posting threads to online discussions</li>
+              <li>Viewing grades</li>
+              <li>Taking online exams</li>
+              <li>Participating in group projects</li>
+            </ul>
+            <p><strong>And much more...</strong></p>
+          </div>
         </div>
-        <div class="box-card--cta">
-          <a href="#" class="default-button button-large button-block scrollto">Need Assistance? &raquo;</a>
+      </div>
+
+      <div class="col-md-4">
+        <div class="simple-blurb-card" data-match-height="blackboardBasics">
+          <div>
+              <h3 class="simple-blurb-card--heading">Student Blackboard Support</h3>
+          </div>
+          <div class="simple-blurb-card--text">
+            <p>Students that need help with Blackboard can contact Teaching, Learning & Technology directly via, phone email, and live chat.</p>
+            <p><a href="#">(631) 632-9602</a></p>
+            <p><a href="#">helpme@stonybrook.edu</a></p>
+            <p><a href="#">Live Chat!</a></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="simple-blurb-card" data-match-height="blackboardBasics">
+          <div>
+              <h3 class="simple-blurb-card--heading">Student FAQs</h3>
+          </div>
+          <div class="simple-blurb-card--text">
+            <ul class="no-bullets">
+              <li><a href="#">Why can't I change my email in Blackboard? &raquo;</a></li>
+              <li><a href="#">What are the technical requirements and compatible browsers for Blackboard? &raquo;</a></li>
+              <li><a href="#"> How do I hide or rearrange courses in Blackboard? &raquo;</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<section id="blackboardBasics" class="cozy bg-x-light-gray">
-  <div class="container cozy">
-    <div class="col-md-12">
-      <h2 class="section-heading"><strong>For Students</strong></h2>
-      <p class="introduction">Blackboard is a web-based course management system that is used as a tool to deliver a course completely online and/or to supplement face-to-face classes.  Blackboard is available to all Stony Brook University students 24/7, from any computer with Internet access.</p>
-    </div>
+<section class="divider">
+  <div class="container">
+    <hr class="divider-gray">
+  </div>
+</section>
 
-    <div class="col-md-6 col-sm-12 col-xs-12">
-      <div class="box-card no-border bg-white" data-match-height="blackboardBasics">
-        <div data-match-height="box-card--headings">
-            <h3 class="box-card--heading red">Logging In</h3>
-        </div>
-        <div class="box-card--content" data-match-height="box-card--content">
-          <p>To log into Blackboard, go to blackboard.stonybrook.edu in your web browser. (NOTE: no “www” in this address.)</p>
-          <p>In the Have an account? box, enter your NetID and NetID password in the respective fields.</p>
-          <p>Once you have entered your credentials, click Login.</p>
-        </div>
-        <div class="box-card--cta">
-          <a href="#" class="default-button button-large button-block scrollto">Launch Blackboard &raquo;</a>
+<section id="instructorGuide" class="cozy bg-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="section-heading"><strong>Blackboard For Instructors</strong></h2>
+      </div>
+
+      <div class="col-md-4">
+        <div class="simple-blurb-card" data-match-height="blackboardBasics">
+          <div>
+              <h3 class="simple-blurb-card--heading">Instructor Use</h3>
+          </div>
+          <div class="simple-blurb-card--text" data-match-height="blurb-card--content">
+            <ul>
+            <li>Post online announcements</li>
+            <li>Post course content (ex: syllabi, handouts, presentations, etc...)</li>
+            <li>Send emails to students</li>
+            <li>Pose questions for online discussions</li>
+            <li>Collect and grade assignments/assessments</li>
+            <li>Manage your grades and/or make them visible to you</li>
+            <li>Create groups for discussions and projects</li>
+            <p><strong>And much more...</strong></p>
+          </div>
         </div>
       </div>
+
+      <div class="col-md-4">
+        <div class="simple-blurb-card" data-match-height="blackboardBasics">
+          <div>
+              <h3 class="simple-blurb-card--heading">Course Setup</h3>
+          </div>
+          <div class="simple-blurb-card--text" data-match-height="blurb-card--content">
+            <ul class="no-bullets">
+              <li><a href="http://it.stonybrook.edu/services/blackboard/navigate-manage">Navigate/Manage Your Course &raquo;</a></li>
+              <li><a href="http://it.stonybrook.edu/services/blackboard/course-content">Manage Course Content &raquo;</a></li>
+              <li><a href="#">Creating Assignments &raquo;</a></li>
+              <li><a href="http://it.stonybrook.edu/services/blackboard/discussion-board">Discussion Board &raquo;</a></li>
+              <li><a href="http://it.stonybrook.edu/services/blackboard/communication">Communication &raquo;</a></li>
+              <li><a href="http://it.stonybrook.edu/services/blackboard/grades-and-grading">Grading &raquo;</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="simple-blurb-card" data-match-height="blackboardBasics">
+          <div>
+              <h3 class="simple-blurb-card--heading">Instructor Support</h3>
+          </div>
+          <div class="simple-blurb-card--text" data-match-height="blurb-card--content">
+            <p>Instructors that need help with Blackboard can contact Teaching, Learning & Technology directly via phone or email.</p>
+            <p><a href="#">(631) 632-2777</a></p>
+            <p><a href="#">blackboard@stonybrook.edu</a></p>
+          </div>
+        </div>
+      </div>
+
     </div>
+  </div>
+</section>
 
-    <div class="col-md-6 col-sm-12 col-xs-12">
-      <div class="box-card no-border bg-white" data-match-height="blackboardBasics">
-        <div data-match-height="box-card--headings">
-            <h3 class="box-card--heading red">Blackboard Mobile</h3>
-        </div>
-        <div class="box-card--content" data-match-height="box-card--content">
-          <p>Instructions for Setting Up the Blackboard Learn App on your SmartPhone:</p>
-          <p><a href="#">iPhone & iPod Touch &raquo;</a></p>
-          <p><a href="#">iPad &raquo;</a></p>
-          <p><a href="#">Android Devices &raquo;</a></p>
-          <p><a href="#">Blackberry Devices &raquo;</a></p>
-          <p><a href="#">Palm Devices &raquo;</a></p>
-
-        </div>
-        <div class="box-card--cta">
-          <a href="#" class="default-button button-large button-block scrollto">Need Assistance? &raquo;</a>
-        </div>
+<section id="gettingHelp" class="fluffy hero-beyond gradient-overlay__TopRight">
+  <div class="container">
+    <div class="row display--flex">
+      <div class="col-md-8">
+        <h2 class="heading white">Getting Help</h2>
+        <p class="introduction white">The Division of Information Technology provides support on all of our services. If you require assistance please submit a support ticket thought the IT Service Management system. </p>
+      </div>
+      <div class="col-md-4">
+        <a class="default-button button-large bg-black" href="#">Submit A Ticket</a>
       </div>
     </div>
   </div>
 </section>
+
+<div class="shield-footer fluffy">
+    <div class="container">
+        <div class="row">
+
+            {{# listItems.four }}
+                <div class="col-md-3">
+                    {{> molecules-footer-nav }}
+                </div>
+            {{/ listItems.four }}
+        </div>
+        <div class="row">
+
+            {{# listItems.three }}
+                <div class="col-md-3">
+                    {{> molecules-footer-nav }}
+                </div>
+            {{/ listItems.three }}
+        </div>
+    </div>
+</div>
