--- a/source/src_scss/atoms/_base.scss
+++ b/source/src_scss/atoms/_base.scss
@@ -19,6 +19,8 @@
 @import "buttons/tuxedo-button";
 @import "buttons/override-button";
 
+@import "dividers/dividers";
+
 @import "images/images";
 
 //@import "lists/inline-list";
