--- a/source/src_scss/atoms/lists/_unordered.scss
+++ b/source/src_scss/atoms/lists/_unordered.scss
@@ -120,7 +120,7 @@ The list-icon class styles the individual icons to ensure equidistant spacing.
 .no-bullets, ul.no-bullets, ul.no-bullets li {
     margin-left: 0;
     margin-top: 0.5em;
-    margin-bottom: 14px;
+    margin-bottom: 0.5em;
     padding: 0;
     list-style: none;
     list-style-type: none;
