--- a/source/src_scss/molecules/cards/_box-card.scss
+++ b/source/src_scss/molecules/cards/_box-card.scss
@@ -1,7 +1,7 @@
 /* cards */
 .box-card {
     font-size: 1.3em;
-    line-height: 1.5en;
+    line-height: 1.5em;
     margin: 1em 0;
     padding: 1em;
     width: 100%;
