--- a/source/src_scss/molecules/cards/_simple-blurb-card.scss
+++ b/source/src_scss/molecules/cards/_simple-blurb-card.scss
@@ -1,6 +1,7 @@
 .simple-blurb-card {
-    padding: 2em;
-}
+    /* padding: 2em; */
+    margin-bottom: 2em;
+  }
 
 .simple-blurb-card--icon {
     @extend .card--icon;
@@ -8,26 +9,31 @@
 
 .simple-blurb-card--image {
 	@extend .card--image;
-	padding: 10px;
-	border: 1px solid #eee;
-	margin-bottom: 15px;
+	/* padding: 10px; */
+	/* border: 1px solid #eee; */
+	/* margin-bottom: 15px; */
 }
 
 .simple-blurb-card--heading {
-    @extend .card--heading;
+    /* @extend .card--heading; */
+    font-weight: 700;
+    line-height: 1em;
 }
 
 .simple-blurb-card--subheading {
     @extend .card--subheading;
-    margin-top: -.3em;
+    line-height: 1em !important;
 }
 
 .simple-blurb-card--text {
-    @extend .card--text;
+    /* @extend .card--text; */
+    font-size: 1.3em;
+    line-height: 1.5em;
 }
 
 .simple-blurb-card--cta {
     @extend .card--cta;
+    margin-top: 1em;
 }
 
 .simple-blurb-card--video-container {
