Updates to service page template (including option for logo), added template for 'DoIT Services' page. Added new service indicators.

--- a/source/_patterns/03-templates/02-service-page.mustache
+++ b/source/_patterns/03-templates/02-service-page.mustache
@@ -7,9 +7,30 @@
   </div>
 </section>
 
+<section id="top" class="fluffy hero-beyond display--flex gradient-overlay__TopRight">
+  <div class="container">
+    <div class="row">
+      <div class="display--flex">
+        <div class="col-md-3">
+            <div class="hero-beyond--logo">
+            <img src="../../placeholders/images/logos/blackboard.png" class="img-responsive">
+          </div>
+        </div>
+        <div class="col-md-11">
+          <div class="hero-beyond--headings">
+            <h2 class="heading white">Blackboard</h2>
+            <p class="introduction white">Blackboard is Stony Brook University's learning management system (LMS).</p>
+          <a class="default-button button-large bg-black" href="#">Launch Blackboard</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <nav class="fixedNav navbar--fixed navbar--fixed__default noPadding noMarginBottom noBorder">
 
   <div class="container">
+
     <div class="navbar--fixed__header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#fixedNavCollapse">
         <span class="sr-only">Toggle navigation</span>
@@ -21,7 +42,6 @@
     </div>
 
     <div class="collapse navbar--fixed__collapse" id="fixedNavCollapse">
-
       <ul class="nav navbar--fixed__links main-nav">
         <li><a href="#blackboardBasics" class="fixedNavLink scrollto">Blackboard Basics</a></li>
         <li><a href="#studentGuide" class="fixedNavLink scrollto">For Students</a></li>
