--- a/source/src_scss/atoms/_base.scss
+++ b/source/src_scss/atoms/_base.scss
@@ -23,6 +23,8 @@
 
 @import "images/images";
 
+@import "indicators/indicators";
+
 //@import "lists/inline-list";
 @import "lists/ordered";
 @import "lists/unordered";
