--- a/source/src_scss/atoms/text/_links.scss
+++ b/source/src_scss/atoms/text/_links.scss
@@ -1,3 +1,27 @@
+.status-indicator {
+  width: .5em;
+  height: .5em;
+  margin-right: .5em;
+  margin-left: -.5em;
+  margin-bottom: .1em;
+  border-radius: 50%;
+  z-index: 1;
+  display: inline-block;
+ }
+.status-indicator--button {
+  font-size: .5em !important;
+  width: auto;
+  padding: .5em 1em;
+  border-radius: 3px;
+  margin-left: 1em;
+  color: #FFFFFF;
+  display: inline-block;
+}
+@media (max-width: 480px) {
+ .mobile-block {
+   display: block !important;
+ }
+}
 a, a:visited, a:active {
     color: $red;
     text-decoration: none;
@@ -9,7 +33,7 @@ a:hover, a.selected {
 
 a.arrow-link:after {
     display: inline-block;
-    content: "\f105";
+    content: "\f101";
     margin: 0 0 0 8px;
     @extend .sbuicon;
     position: relative;
