--- a/source/src_scss/global/_extendables.scss
+++ b/source/src_scss/global/_extendables.scss
@@ -149,3 +149,9 @@
     padding-right: 0px !important; //override pull-left padding
 }
 
+
+@media (max-width: 480px) {
+ .mobile-block {
+   display: block !important;
+ }
+}
