Added service indicator buttons.

--- a/source/_patterns/03-templates/02-service-page.mustache
+++ b/source/_patterns/03-templates/02-service-page.mustache
@@ -11,12 +11,12 @@
   <div class="container">
     <div class="row">
       <div class="display--flex">
-        <div class="col-md-3">
+        <div class="hidden-xs hidden-sm col-md-3">
             <div class="hero-beyond--logo">
             <img src="../../placeholders/images/logos/blackboard.png" class="img-responsive">
           </div>
         </div>
-        <div class="col-md-11">
+        <div class="col-sm-12 col-md-9">
           <div class="hero-beyond--headings">
             <h2 class="heading white">Blackboard</h2>
             <p class="introduction white">Blackboard is Stony Brook University's learning management system (LMS).</p>
@@ -82,14 +82,14 @@
           </div>
           <div class="simple-blurb-card--text" data-match-height="blurb-card--content">
             <p>Instructions for Setting Up the Blackboard Learn App on your SmartPhone:</p>
-            <p><a href="#">iPhone & iPod Touch &raquo;</a></p>
-            <p><a href="#">iPad &raquo;</a></p>
-            <p><a href="#">Android Devices &raquo;</a></p>
-            <p><a href="#">Blackberry Devices &raquo;</a></p>
-            <p><a href="#">Palm Devices &raquo;</a></p>
+            <p><a href="#" class="arrow-link">iPhone & iPod Touch</a></p>
+            <p><a href="#" class="arrow-link">iPad </a></p>
+            <p><a href="#" class="arrow-link">Android Devices</a></p>
+            <p><a href="#" class="arrow-link">Blackberry Devices</a></p>
+            <p><a href="#" class="arrow-link">Palm Devices</a></p>
           </div>
           <div class="simple-blurb-card--cta">
-            <a href="#" class="default-button scrollto">Need Assistance? &raquo;</a>
+            <a href="#" class="default-button scrollto arrow-link">Need Assistance?</a>
           </div>
         </div>
       </div>
@@ -227,6 +227,20 @@ Blackboard is a web-based course management system that is used as a tool to del
         </div>
       </div>
 
+    </div>
+  </div>
+</section>
+
+<section id="gettingHelp" class="fluffy hero-beyond__black gradient-overlay__TopRight">
+  <div class="container">
+    <div class="row display--flex">
+      <div class="col-md-6">
+        <p class="heading white">Frequently Asked Questions</p>
+        <p class="introduction white">The Division of Information Technology provides support on all of our services. If you require assistance please submit a support ticket thought the IT Service Management system. </p>
+      </div>
+      <div class="col-md-6">
+        <a class="default-button button-large bg-black" href="#">Submit A Ticket</a>
+      </div>
     </div>
   </div>
 </section>
