--- a/source/_patterns/03-templates/03-Filter-Service-Page.mustache
+++ b/source/_patterns/03-templates/03-Filter-Service-Page.mustache
@@ -5,11 +5,11 @@
             <p class="introduction white">We offer best-in-class services for academic use.</p>
             <span class="default-button button-large bg-white red mobile-block" href="#"><span class="red">Top Services</span></span>
             <a class="default-button button-large bg-black mobile-block" href="#">
-                <div class="status-indicator bg-red" data-toggle="tooltip" title="This service is experiencing a disruption."></div>Blackboard</a>
+                <div class="status-indicator bg-red" data-toggle="tooltip" title="This service is experiencing an outage."></div>Blackboard</a>
             <a class="default-button button-large bg-black mobile-block" href="#">
                 <div class="status-indicator bg-emerald" data-toggle="tooltip" title="This service is reported online."></div>SOLAR</a>
             <a class="default-button button-large bg-black mobile-block" href="#">
-                <div class="status-indicator bg-emerald" data-toggle="tooltip" title="This service is reported online."></div>Google Apps</a>
+                <div class="status-indicator bg-sun" data-toggle="tooltip" title="This service is experiencing an outage."></div>Google Apps</a>
             <a class="default-button button-large bg-black mobile-block" href="#">
                 <div class="status-indicator bg-river" data-toggle="tooltip" title="This service has a notification."></div>WolfieNet</a>
         </div>
@@ -67,7 +67,7 @@
             <div class="col-md-12">
                 <div class="box-card no-border noPadding">
                     <div>
-                        <h3 class="box-card--heading red display--flex">25Live <span class="status-indicator--button bg-red" role="alert">Service Disruption</span></h3>
+                        <h3 class="box-card--heading red display--flex">25Live <span class="status-indicator--button bg-red" role="alert">Service Outage</span></h3>
                         <strong class="box-card--subheading">Hong Kong Phooey, quicker than the human eye. He's got style, a groovy</strong>
                     </div>
                     <div class="box-card--content">
@@ -87,6 +87,25 @@
                 <div class="box-card no-border noPadding">
                     <div>
                         <h3 class="box-card--heading red display--flex">25Live <div class="status-indicator--button bg-river" role="alert">Service Notification</div></h3>
+                        <strong class="box-card--subheading">Hong Kong Phooey, quicker than the human eye. He's got style, a groovy</strong>
+                    </div>
+                    <div class="box-card--content">
+                        <p>Nullam lobortis elementum enim nec porta. Quisque facilisis ullamcorper nisl at pharetra. Donec sit amet nisl turpis. Fusce odio nunc, euismod eget ligula eget, cursus accumsan nisl. Vivamus sollicitudin odio a erat malesuada commodo.</p>
+                    </div>
+                    <div class="box-card--cta">
+                        <a href="#" class="arrow-link">Go to Service Page</a>
+                    </div>
+                </div>
+            </div>
+            <section class="divider">
+                <div class="container">
+                    <hr class="divider-gray">
+                </div>
+            </section>
+            <div class="col-md-12">
+                <div class="box-card no-border noPadding">
+                    <div>
+                        <h3 class="box-card--heading red display--flex">25Live <div class="status-indicator--button bg-sun" role="alert">Service Disruption</div></h3>
                         <strong class="box-card--subheading">Hong Kong Phooey, quicker than the human eye. He's got style, a groovy</strong>
                     </div>
                     <div class="box-card--content">
