Styling fixes on drop-accordion cards. Fixed font issue, margin is now on headline not on arrow-icon.

--- a/source/_patterns/01-molecules/cards/_4700-drop-accordion-card.mustache
+++ b/source/_patterns/01-molecules/cards/_4700-drop-accordion-card.mustache
@@ -1,7 +1,9 @@
 <div class="drop-accordion-card">
     <div class="drop-accordion-card--tab">
+      <div class="display--flex">
         <span class="drop-accordion-card--icon sbuicon-angle-down"></span>
-        <span>{{headline.medium}}</span>
+        <span class="drop-accordion-card--headline">{{headline.medium}}</span>
+      </div>
     </div>
     <div class="drop-accordion-card--content-wrap hide-accessible">
         <div class="drop-accordion-card--content">
