--- a/source/_patterns/03-templates/02-service-page.mustache
+++ b/source/_patterns/03-templates/02-service-page.mustache
@@ -231,11 +231,11 @@ Blackboard is a web-based course management system that is used as a tool to del
   </div>
 </section>
 
-<section id="gettingHelp" class="fluffy hero-beyond__black gradient-overlay__TopRight">
+<section id="gettingHelp" class="fluffy bg-asphalt">
   <div class="container">
     <div class="row display--flex">
       <div class="col-md-6">
-        <p class="heading white">Frequently Asked Questions</p>
+        <h2 class="heading white">Frequently Asked Questions</h2>
         <p class="introduction white">The Division of Information Technology provides support on all of our services. If you require assistance please submit a support ticket thought the IT Service Management system. </p>
       </div>
       <div class="col-md-6">
