Display flex fix for mobile.

--- a/source/_patterns/01-molecules/cards/_4700-drop-accordion-card.mustache
+++ b/source/_patterns/01-molecules/cards/_4700-drop-accordion-card.mustache
@@ -1,6 +1,6 @@
 <div class="drop-accordion-card">
     <div class="drop-accordion-card--tab">
-      <div class="display--flex">
+      <div class="display--flex-mobile">
         <span class="drop-accordion-card--icon sbuicon-angle-down"></span>
         <span class="drop-accordion-card--headline">{{headline.medium}}</span>
       </div>
