--- a/source/src_scss/molecules/cards/_drop-accordion-card.scss
+++ b/source/src_scss/molecules/cards/_drop-accordion-card.scss
@@ -24,7 +24,7 @@
     font-family: $font;
     cursor: pointer;
     z-index: 101;
-    padding: 1em 1.5em;
+    padding: 1em 1em 1em .85em;
     position: relative;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -44,13 +44,14 @@
     }
 }
 
+
 .js-drop-accordion-card__active .drop-accordion-card--icon {
     color: $red;
-    -webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
+    -webkit-transform: rotateX(180deg);
+    -moz-transform: rotateX(180deg);
+    -ms-transform: rotateX(180deg);
+    -o-transform: rotateX(180deg);
+    transform: rotateX(180deg);
 }
 
 .drop-accordion-card--content-wrap {
