--- a/source/src_scss/organisms/heros/_hero-beyond.scss
+++ b/source/src_scss/organisms/heros/_hero-beyond.scss
@@ -24,7 +24,7 @@
 }
 .hero-beyond--headings
 {
-  margin: 3.5em 0;
+  margin: 2em 0;
 }
 
 .hero-beyond--subheading {
@@ -34,6 +34,17 @@
   color: $white;
   font-size: 4.6em;
   line-height: 1;
+}
+
+
+.hero-beyond--text {
+    font-size: 1.8em;
+    line-height: 1.2em;
+    color: $white;
+}
+
+.hero-beyond--buttons{
+    margin: 2em 0;
 }
 
 .hero-beyond:after {
